changes related to speech

--- a/template/modals/login.html
+++ b/template/modals/login.html
@@ -1,5 +1,5 @@
 <!--  <div ng-show = "global.b !== 'omkjksjdjo889367262877l'"> -->  <div class="modal-footer" >
-        <button type="button" class="btn btn-default" ng-click="close()">Close</button>
+        <button type="button" class="btn btn-default" name="close" ng-click="close()">Close</button>
     </div>
  <form class="row form loginPage" id = "loginPage" ng-show = 'showLogin'>
         <h3>Login to Your Account</h3>
