--- a/template/modals/contactUs.html
+++ b/template/modals/contactUs.html
@@ -1,7 +1,7 @@
 
     <div >
           <div class="modal-header">
-              <button type="button" ng-click="close()" class="close" data-dismiss="modal">&times;</button>
+              <button type="button" ng-click="close()" name="close" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title">Contact Us</h4>
           </div>
       
