--- a/template/modals/popupMsg.html
+++ b/template/modals/popupMsg.html
@@ -1,7 +1,7 @@
 
     <div class="googleMapContent">
           <div class="modal-header">
-              <button type="button" ng-click="close()" class="close" data-dismiss="modal">&times;</button>
+              <button type="button" ng-click="close()" name="close" class="close" data-dismiss="modal">&times;</button>
               <h4 class="modal-title">{{header}}</h4>
           </div>
       
