--- a/template/afterLogin.html
+++ b/template/afterLogin.html
@@ -5,19 +5,19 @@
 					<div class="col-sm-6">
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
-								<li><a href="#"><i class="fa fa-phone"></i> +919910430419</a></li>
-								<li><a href="#"><i class="fa fa-envelope"></i> bijay.iit12@gmail.com</a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-phone"></i> +919910430419</a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-envelope"></i> bijay.iit12@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6">
 						<div class="social-icons pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-dribbble"></i></a></li>
+								<li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
 							</ul>
 						</div>
 					</div>
