--- a/coach/firstPage/css/style.css
+++ b/coach/firstPage/css/style.css
@@ -45,7 +45,7 @@ body{
 	background: url(../images/gradient.png) 0 bottom repeat-x;
 }
 .header-bg{
-	background:#FA8D03;
+	background: #FDF4E8;
 }
 .logo h1 a{
 	font-family: 'Montserrat Alternates', sans-serif;
