--- a/coach/template/home.html
+++ b/coach/template/home.html
@@ -1,7 +1,7 @@
 <div ng-controller = "homeCoachCtrl">
 	<div class="banner-box">
 		<div class="wrap" >
-			<div class="main-top" ng-init = "class = ['desc', 'desc-middle', 'last']">
+			<div  ng-init = "class = ['desc', 'desc-middle', 'last']">
 				<div class="main" >
 					<div class="banner">
 						<img src="./coach/firstPage/images/banner1.jpg" alt=""/>
