--- a/template/modals/popupMsg.html
+++ b/template/modals/popupMsg.html
@@ -6,16 +6,22 @@
           </div>
       
                 
-          <div class="modal-body">
-               <div class="bg">
+          <div class="modal-body" >
+               <div class="bg" ng-show="!takeInput">
                   <p>{{msg}}</p>
               </div>  
-            
-          
-
-            
+              <div class="form-group" ng-form name="myForm" ng-show="takeInput" ng-class="{
+                    'has-error': myForm.myInput.$invalid,
+                    'has-success': myForm.myInput.$valid && myForm.myInput.$dirty 
+                  }">
+                  <label  >{{global.msg.disp_link_name}}</label>
+                  <input name="myInput" type="text" class="form-control" ng-model="inputText" required ng-maxlength="30">
+                  <span class="error help-block help-block-error custom-date-error" ng-show="myForm.myInput.$error.maxlength">{{global.msg.error_length_greater_30}}</span>
+                  <span ng-show="myForm.myInput.$error.required" class = "help-block help-block-error custom-date-error">{{global.msg.error_required}}</span>
+              </div>
           </div>
           <div class="footerClose">
+                <button type="button" ng-show="takeInput" ng-disabled = "myForm.$invalid" class="btn btn-default" ng-click="create()" data-dismiss="modal">Create</button>
                 <button type="button" class="btn btn-default" ng-click="close()" data-dismiss="modal">Close</button>
           </div>
          
