--- a/coach/firstPage/css/style.css
+++ b/coach/firstPage/css/style.css
@@ -34,6 +34,7 @@ body{
 .wrap{
 	width:80%;
 	margin:0 auto;
+	background-color: white !important;
 	-moz-transition:all .2s linear;
 	-webkit-transition:all .2s linear; 
 	-o-transition:all .2s linear; 
@@ -45,7 +46,7 @@ body{
 	background: url(../images/gradient.png) 0 bottom repeat-x;
 }
 .header-bg{
-	background: #FDF4E8;
+	background: #E9EAED;
 }
 .logo h1 a{
 	font-family: 'Montserrat Alternates', sans-serif;
@@ -157,7 +158,7 @@ body{
 	background:#333 url('../images/search.png') no-repeat 11px 13px;
 }
 .banner-box{
-	background:#FDF4E8;
+    background: #E9EAED;
 }
 .main{
 	padding:3%;
@@ -370,6 +371,7 @@ p.title-desc{
 }
 .content-bottom{
 	background: url(../images/2.png) repeat-x;
+	background-color: #E9EAED;
 	padding: 3%;
 	margin-top: -5px;
 }
@@ -445,7 +447,7 @@ ul.dishes_list li a:hover {
 	margin-left: 0;
 }
 .grid_1_of_3 {
-	width:32%;
+	width:40%;
 }
 .col_1_of_3 {
 	display: block;
