--- a/css/myOwn.css
+++ b/css/myOwn.css
@@ -59,12 +59,14 @@ width: 44%;
     position: absolute;
     top: 17px;
     z-index: 2;
-    overflow-y: auto;
-    max-height: 300px;
+   
 }
 .searchBox ul {
   list-style: none;
   padding-left: 0px;
+   overflow-y: auto;
+    max-height: 300px;
+    width: 100%;
 }
 .searchBox ul li
 {
@@ -82,7 +84,6 @@ width: 44%;
     z-index: 10;
 }
 .loginProfessionSearchBox {
-    margin-top: 76%;
     z-index: 10;
     width: 75%;
 }
