--- a/coach/template/header.html
+++ b/coach/template/header.html
@@ -3,7 +3,6 @@
 <link href="./coach/firstPage/css/myOwnCoach.css" rel="stylesheet" type="text/css"/>
 <!-- <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'> -->
 
-<body>
 <div class="header-bg">
 	<div class="wrap"> 
 		<div class="total-box">
@@ -13,14 +12,14 @@
 				     		<ul>
 						    	<li ng-class="{'active': coach.tab === 'home'}" ng-click = "coach.tab = 'home'"><a href="javascript:void(0)" ui-sref="coach.home">Home</a></li>
 						    	<li   ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal')"><a href="javascript:void(0)">Login/SignUp</a></li>
-						    	<li ng-class="{'active': coach.tab === 'home'}" ng-click = "coach.tab = 'home'"><a href="javascript:void(0)" ui-sref="coach.home">Edit Website</a></li>
+						    	<li ng-click = "global.openModal('template/modals/login.html', 'loginSignUp', undefined, 'extraLarge-Modal', 'edit_website')"><a href="javascript:void(0)" >Edit Website</a></li>
 						    	<!-- <li ng-class="{'active': coach.tab === 'login'}" ng-click = "global.openModal('formBuilder/index.html', 'DemoController', undefined, 'extraLarge-Modal');coach.tab = 'login'"><a href="javascript:void(0)" ui-sref="coach.home">Form Builder</a></li> -->
-						    	<li ng-repeat="item in coach.linkArray" ng-if = "item.type !== 'static'" ng-click="coach.currentLinkClick = item"><a ui-sref="coach.about" name="{{item.link}}">{{item.link}}</a></li>
+						    	<li ng-repeat="item in coach.linkArray" ng-if = "item.type !== 'static'" ng-class="{'active': coach.tab === item.link}" ng-click="coach.currentLinkClick = item;coach.tab = item.link"><a ui-sref="coach.about" name="{{item.link}}">{{item.link}}</a></li>
 						    	<div class="clear"></div>
 			     			</ul>
 				     	</div>
 				     	<ul class="follow_icon">
-				     		<li><a href="javascript:void(0)" style="opacity: 1;" ng-click = "global.openModal('template/modals/popupMsg.html', 'smallInputCoach', 'link');" ><img class="imgResizeBottom" src="./webdata/imgOwn/add.png" alt=""></a></li>
+				     		<li><a href="javascript:void(0)" style="opacity: 1;" ng-show = "coach.a === coach.aToMatch" ng-click = "global.openModal('template/modals/popupMsg.html', 'smallInputCoach', 'link');" ><img class="imgResizeBottom" src="./webdata/imgOwn/add.png" alt=""></a></li>
 							<!-- <li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/fb.png" alt=""></a></li>
 							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/tw.png" alt=""></a></li>
 							<li><a href="javascript:void(0)" style="opacity: 1;"><img src="./coach/firstPage/images/rss.png" alt=""></a></li> -->
